--- a/config.gradle
+++ b/config.gradle
@@ -12,6 +12,8 @@ ext {
     version = [
             supportLibraryVersion   : "27.1.1",
 
+            leakcanaryVersion       : "1.5.4"
+
     ]
 
 
@@ -19,7 +21,12 @@ ext {
             //android-support
             "appcompat-v7"              : "com.android.support:appcompat-v7:${version["supportLibraryVersion"]}",
 
+            "design"                    : "com.android.support:design:${version["supportLibraryVersion"]}",
+
             "barlibrary"                : "com.gyf.barlibrary:barlibrary:2.3.0",
+            "ByeBurger"                 : "com.github.githubwing:ByeBurger:1.2.3",
+            "SmartRefreshLayout"        : "com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1",
+            "BaseRecyclerViewAdapter"   : "com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30",
 
             // butterKnife
             "butterknife"               : "com.jakewharton:butterknife:8.8.1",
@@ -43,8 +50,11 @@ ext {
             "dagger-compiler"           : "com.google.dagger:dagger-compiler:2.15",
 
             "glide"                     : "com.github.bumptech.glide:glide:4.7.1" ,
-            "glede-compiler"            : "com.github.bumptech.glide:compiler:4.7.1",
-            "FlycoTabLayout_Lib"        : "com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar"
+            "glide-compiler"            : "com.github.bumptech.glide:compiler:4.7.1",
+            "FlycoTabLayout_Lib"        : "com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar",
+
+            "leakcanary-android"        : "com.squareup.leakcanary:leakcanary-android:${version["leakcanaryVersion"]}",
+            "leakcanary-android-no-op"  : "com.squareup.leakcanary:leakcanary-android-no-op:${version["leakcanaryVersion"]}"
 
 
     ]
