主页基本框架搭建

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,5 +63,7 @@ dependencies {
     implementation rootProject.ext.dependencies["ByeBurger"]
     implementation rootProject.ext.dependencies["SmartRefreshLayout"]
     implementation rootProject.ext.dependencies["BaseRecyclerViewAdapter"]
+    implementation rootProject.ext.dependencies["agentweb"]
+
 
 }
