--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,10 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation rootProject.ext.dependencies["appcompat-v7"]
     implementation rootProject.ext.dependencies["design"]
     implementation rootProject.ext.dependencies["barlibrary"]
@@ -64,6 +62,5 @@ dependencies {
     implementation rootProject.ext.dependencies["SmartRefreshLayout"]
     implementation rootProject.ext.dependencies["BaseRecyclerViewAdapter"]
     implementation rootProject.ext.dependencies["agentweb"]
-
-
+    implementation rootProject.ext.dependencies["cardview"]
 }
